+ New unique monster: Crazy Imp that sings and plays guitar.
+ New monster: haze cat, with very good night vision.
+ New monster: spiders, with panoramic vision and confusing bite.
+ New monster: acid mounds, with magara charge corroding byte.
+ Satowalga plants now may corrode your magara charges, instead of slowing you.
+ New magara of energy that replenishes HP and MP, but only has one charge.
+ 4 new special rooms.
+ Display number of remaining turns for monsters statuses too.
+ Fix rare bug when blinking to the same place.
+ Make “x” key work in key settings menu.
+ Fix bug which could lead to negative number of bananas when jumping into
  chasm.
+ Minor UI/messages improvements.

-----------------------------------------------------------------------------
v0.2 2019-07-22

+ Many new special room shapes.
+ Much improved story timeline in character game statistics.
+ Add effect duration in magara description when possible.
+ Improved fullscreen support with F11 in browser version.
+ New tile for extinguished lights, and improved tile for doors.
+ Handle window closing gracefully in Tk version.

-----------------------------------------------------------------------------
v0.1 2019-05-11

First release of Harmonist: Dayoriah Clan Infiltration.

Features:

- Short coffee-break runs (around half an hour).
- 8 levels deep dungeon (+ 3 optional levels), 3 distinct map generators, 19
  monsters, 6 magical cloaks, 6 magical amulets, and 16 magaras (evokable
  magical items).
- Both graphical tiles (web or Tk) and terminal ASCII versions. Animations.
  Simple controls.  Mouse support.  Mouse-friendly 100x26 layout, and
  traditional compact 80x24 layout.  Automatic recording for later replay.
- Light and noise stealth mechanics. Monster footsteps can be heared.
- A main story narrative, and many short lore texts.
- No XP, no upstairs, no automatic regeneration, no grinding/farming.
- Fully destructible terrain (wall destruction, foliage fire).